--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,11 +11,22 @@ spring:
     password: ${datasource-password}
 
   jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+        generate_statistics: false
+        ddl-auto: update
+        jdbc:
+          batch_size: 100
+        cache:
+          use_second_level_cache: false
+        logging:
+          level:
+            org.hibernate.SQL: DEBUG
+            org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
-#  flyway:
 #    enabled: true
 #    encoding: UTF-8
 #    baseline-on-migrate: true
